sumo/tests/sumo/errors/routes/emptyroute_oldstyle_plainemission/errors.sumo
Error: Route '0' has no edges.
Quitting (on error).
